# display-control-plasmoid

./: .gitignore  CMakeLists.txt  README.rst  main.qml
src/: CMakeLists.txt
src/plasmoid/: metadata.desktop
src/plasmoid/contents/ui/: main.qml
src/plugin/: CMakeLists.txt  DDCUtilHelper.cpp  DDCUtilHelper.h  displaycontrolplasmoidplugin.cpp  displaycontrolplasmoidplugin.h  monitoritem.cpp  monitoritem.h  qmldir
