cmake_minimum_required(VERSION 3.10)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(DISPLAY_CONTROL_PLASMOID_VERSION 0.1.0)
project(displaycontrolplasmoid VERSION ${DISPLAY_CONTROL_PLASMOID_VERSION})

set(REQUIRED_QT_VERSION 5.12.0)
set(REQUIRED_KF5_VERSION 5.60)

find_package(ECM ${REQUIRED_KF5_VERSION} REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${ECM_MODULE_PATH})

include(FeatureSummary)
include(KDEInstallDirs)

find_package(KF5 REQUIRED COMPONENTS Plasma)
find_package(
    Qt5 REQUIRED

    COMPONENTS
        Core
        Qml
)

add_subdirectory(src)

feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)

file(GLOB_RECURSE ALL_CLANG_FORMAT_SOURCE_FILES *.cpp *.h)
